# Itchio-2d

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  README.md  verify_build.bat  verify_build.sh
TheInfection/: CHANGELOG.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  REQUIREMENT_MAPPING.md  mod.info
TheInfection/media/: sandbox-options.txt
TheInfection/media/lua/client/: InfectionClient.lua  InfectionUI.lua
TheInfection/media/lua/server/: DefensiveStructures.lua  InfectionServer.lua  InfectionTimer.lua  SandboxOptions.lua  SpawnController.lua  ZombieRemoval.lua
TheInfection/media/lua/shared/: InfectionConfig.lua  InfectionUtils.lua
TheInfection/media/lua/shared/Translate/EN/: Sandbox_EN.txt
TheInfection/media/scripts/: items_onslaught.txt  recipes_onslaught.txt
assets/fonts/: .gitkeep
assets/sounds/: .gitkeep
assets/sprites/: .gitkeep
config/: GameTypeA.json  GameTypeB.json
docs/: .gitkeep  ARCHITECTURE.md  BUILDING_WINDOWS.md  GAMEDATA_STRUCTURE.md  MAP_MODDING.md  MODDING_GUIDE.md  MOD_OVERVIEW.md  MOD_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESOURCES.md  ROADMAP.md  SYSTEM_DESIGN.md  TECHNICAL_IMPLEMENTATION.md
scripts/: EXTRACTION_GUIDE.md  README.md  extract_map.sh
src/: .gitkeep
src/Core/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Engine.cpp  Engine.h  GameTypeSwitcherDemo.cpp  GraphicsAbstractionLayer.cpp  GraphicsAbstractionLayer.h  ISystem.h  Main.cpp  SystemManager.cpp  SystemManager.h  TestSystemManager.cpp
src/Modules/: CMakeLists.txt
src/Systems/: AISystem.cpp  CMakeLists.txt  PhysicsSystem.cpp  RenderingSystem.cpp
